// ============================================================
// AUTH (Better Auth, DB-backed sessions + cookie cache)
// ============================================================
// Four tables: users, accounts, sessions, verifications.
// All are managed by Better Auth. App code generally does not
// write to them directly.
//
// Sessions ARE persisted (in `sessions`). better-auth 1.6.11
// requires a session row whenever a database adapter is configured
// — a truly tableless/stateless session is only available in
// DB-less or secondary-storage (Redis) setups, which we don't use.
//
// To keep reads cheap we put a short-lived signed cookie cache in
// front of the table: within `cookieCache.maxAge` the session is
// read straight from the cookie (no DB hit); after it lapses the
// next read revalidates against `sessions` and rewrites the cookie.
//
// Revocation: deleting a `sessions` row takes effect at the next
// cache lapse (<= maxAge). To invalidate every cookie at once, bump
// `cookieCache.version` and redeploy.
//
// Better Auth defaults to singular model names ('user', 'account',
// 'session', 'verification'). Our tables are plural, so the Drizzle
// adapter is configured with `usePlural: true`. No per-field mapping
// is needed: the Drizzle table uses the camelCase TS property name
// Better Auth expects with a snake_case DB column, e.g.
//   emailVerified: boolean("email_verified").notNull()
// so the adapter matches fields by property name automatically.
//
// Config lives in src/lib/auth:
//
//   export const auth = betterAuth({
//     database: drizzleAdapter(db, { provider: "pg", schema, usePlural: true }),
//     advanced: { database: { generateId: "uuid" } }, // Postgres gen_random_uuid()
//     session: {
//       expiresIn: 60 * 60 * 24 * 7, // 7 days (DB session lifetime)
//       updateAge: 60 * 60 * 24,     // 1 day (sliding refresh of expiry)
//       cookieCache: {
//         enabled: true,
//         maxAge: 5 * 60,      // 5 min cookie-read window
//         version: "1",        // bump + redeploy = global cookie revocation
//         strategy: "compact", // signed; readable base64 (not encrypted)
//       },
//     },
//   });
//
// (`refreshCache` is intentionally omitted — better-auth disables it
//  with a warning whenever a database adapter is present.)

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [unique, not null]
  email_verified boolean [not null, default: false]
  name varchar [not null]
  image varchar [note: 'avatar url, populated from OAuth profile when available']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// One row per auth method per user.
//   Email/password: provider_id = 'credential',
//                   account_id  = users.id (string form),
//                   password    = bcrypt/argon2 hash
//   OAuth:          provider_id = 'google' | 'github',
//                   account_id  = provider's stable user id,
//                   password    = NULL,
//                   access_token / refresh_token / id_token / scope set
// A single user can have multiple rows (linked Google + GitHub + credential):
// one account per email. Linking is by VERIFIED email — signing in with a
// provider whose verified email matches an existing user adds a row to that
// user instead of creating a second user. Verified-email only (no forced
// trusted-provider linking). Configured via account.accountLinking in
// src/lib/better-auth.
Table accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null, note: 'ON DELETE CASCADE']
  account_id varchar [not null, note: 'provider account id, or users.id for credential']
  provider_id varchar [not null, note: "'credential' | 'google' | 'github'"]

  // OAuth tokens (nullable, only set for OAuth providers)
  access_token text
  refresh_token text
  access_token_expires_at timestamptz
  refresh_token_expires_at timestamptz
  scope varchar
  id_token text

  // For email/password (nullable for OAuth-only accounts)
  password varchar [note: 'password hash; only set when provider_id = credential']

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    // Same provider identity cannot be linked to two different users.
    (provider_id, account_id) [unique]
  }
}

// One row per active session. Better Auth writes a row on sign-in and
// reads it when the cookie cache lapses. `token` doubles as the session
// cookie value. App code does not touch this directly.
Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  token varchar [unique, not null, note: 'session token; also the cookie value']
  user_id uuid [ref: > users.id, not null, note: 'ON DELETE CASCADE']
  expires_at timestamptz [not null]
  ip_address varchar [note: 'captured from the request at creation; nullable']
  user_agent text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
  }
}

// Used for email verification, password reset, magic links, etc.
// These tokens MUST persist server-side; they cannot live in cookies.
// Better Auth writes/reads this; app code does not touch it directly.
Table verifications {
  id uuid [pk, default: `gen_random_uuid()`]
  identifier varchar [not null, note: 'email or other identifier being verified']
  value varchar [not null, note: 'token / code']
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    identifier
    expires_at
  }
}

// ============================================================
// JOB HUNT
// ============================================================

Enum job_hunt_status {
  active
  ended
}

Table job_hunts {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  name varchar [not null]
  status job_hunt_status [not null, default: 'active']
  started_at timestamptz [not null, default: `now()`]
  ended_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    // Partial unique index to enforce "one active job_hunt per user".
    // In raw SQL: CREATE UNIQUE INDEX ... ON job_hunts(user_id) WHERE status = 'active'
    (user_id) [unique, name: 'one_active_job_hunt_per_user', note: 'partial: WHERE status = active']
  }
}

// ============================================================
// APPLICATION
// ============================================================

// Top-level board stages. Rendered as columns in the UI, but they are stages.
Enum board_stage {
  applied
  active
  final_stages
  closed
}

Enum closed_outcome {
  rejected
  withdrawn
  accepted
  ghosted
}

Enum application_source {
  linkedin
  itviec
  referral
  direct
  recruiter
  other
}

Enum working_model {
  remote
  hybrid
  onsite
}

// User-configurable sub-stages (HR screen, tech screen, onsite, etc.)
// Only the 'active' and 'final_stages' board stages have sub-stages. 'applied' is a
// single waiting state and 'closed' is sub-classified by closed_outcome, so the
// sub-stage CRUD UI offers only those two stages. (Enforced in app code; the enum
// itself still permits any board_stage value.)
//
// The (id, stage) unique index below exists solely to back the composite FK from
// applications(sub_stage_id, stage) -> sub_stages(id, stage), which guarantees a
// card's sub-stage always belongs to the card's current board stage. See ADR-0001.
Table sub_stages {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  name varchar [not null]
  stage board_stage [not null, note: 'which board stage this sub-stage belongs to; only active | final_stages in practice']
  sort_order int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, stage, name) [unique]
    // Target of the composite FK on applications; enables (sub_stage_id, stage) matching.
    (id, stage) [unique]
  }
}

Table applications {
  id uuid [pk]
  job_hunt_id uuid [ref: > job_hunts.id, not null]
  company varchar [not null]
  role varchar [not null]

  // Board position.
  // Integrity: a composite FK (sub_stage_id, stage) -> sub_stages(id, stage) forces the
  // chosen sub-stage to belong to the current board stage. sub_stage_id is nullable, so
  // under MATCH SIMPLE the FK is unchecked when it is NULL ("no sub-stage" is always
  // legal). A stage move sets sub_stage_id = NULL; the user re-picks. See ADR-0001.
  //   In raw SQL:
  //   FOREIGN KEY (sub_stage_id, stage) REFERENCES sub_stages (id, stage)
  stage board_stage [not null, default: 'applied']
  sub_stage_id uuid [ref: > sub_stages.id, note: 'part of composite FK with stage; cleared on stage move']

  // User flag: high-fit / high-interest marker
  favorite boolean [not null, default: false, note: 'organizational flag; not activity-logged (ADR-0007)']

  // Optional metadata (all nullable on purpose)
  source application_source
  jd_url varchar
  jd_text text [note: 'fallback if posting gets taken down']
  location varchar
  working_model working_model
  salary_min int
  salary_max int
  salary_currency varchar
  notes text

  // Resume used for this application
  resume_id uuid [ref: > resumes.id]

  // Closed-state details
  closed_outcome closed_outcome [note: 'must be NULL when stage != closed; must be set when stage = closed']
  closed_at timestamptz [note: 'must be NULL when stage != closed; must be set when stage = closed']

  applied_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    job_hunt_id
    (job_hunt_id, stage)
  }
}

// Free-form filter tags (frontend, remote, startup, etc.) - user-owned, reusable
Table tags {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  name varchar [not null]
  color varchar
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, name) [unique]
  }
}

Table application_tags {
  application_id uuid [ref: > applications.id]
  tag_id uuid [ref: > tags.id]

  indexes {
    (application_id, tag_id) [pk]
  }
}

// ============================================================
// RESUME
// ============================================================

Enum resume_scope {
  library
  application
}

// Scope rules:
//   scope = 'library'     + application_id IS NULL  -> shows in picker, reusable across apps
//   scope = 'application' + application_id = <id>   -> hidden from picker, one-off for that app
// Promote a one-off to the library:
//   UPDATE resumes SET scope = 'library', application_id = NULL WHERE id = ?
// Invariant: (scope = 'library') <=> (application_id IS NULL)
// Enforce in raw SQL with a CHECK constraint:
//   CHECK ((scope = 'library' AND application_id IS NULL)
//       OR (scope = 'application' AND application_id IS NOT NULL))
Table resumes {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  name varchar [not null]
  scope resume_scope [not null]
  application_id uuid [ref: > applications.id, note: 'set if scope = application; see scope rules above']

  file_url varchar [not null, note: 'object storage path/key']
  file_size_bytes bigint
  mime_type varchar
  created_at timestamptz [not null, default: `now()`]
  // Soft delete: deleting a library resume drops it from the picker but keeps the row
  // and the applications.resume_id linkage so retro resume-performance attribution
  // survives. The Blob object may be purged; this metadata row persists. See ADR-0003.
  deleted_at timestamptz

  indexes {
    (user_id, scope)
    application_id
  }
}

// ============================================================
// EVENTS (future-dated: interviews, take-homes, deadlines)
// ============================================================

Enum event_type {
  hr_screen
  tech_screen
  onsite
  take_home_due
  offer_deadline
  other
}

Enum event_status {
  scheduled
  completed
  cancelled
}

Table events {
  id uuid [pk]
  application_id uuid [ref: > applications.id, not null]
  type event_type [not null]
  title varchar
  scheduled_at timestamptz [not null]
  duration_minutes int
  location varchar [note: 'address or video link']
  notes text
  status event_status [not null, default: 'scheduled']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    application_id
    scheduled_at
  }
}

// ============================================================
// ACTIVITY LOG
// ============================================================

Enum activity_type {
  created
  stage_change
  sub_stage_change
  note_added
  response_received // auto on first advance out of Applied or close-as-rejected; manual fallback. Never for ghosted.
  event_scheduled
  event_completed
  event_cancelled
  resume_changed
  offer_received    // auto when an offer_deadline event is created or on close-as-accepted (backfill); manual too. Funnel "offer" node.
  closed
}

Table activity_log {
  id uuid [pk]
  application_id uuid [ref: > applications.id, not null]
  type activity_type [not null]
  description text
  // Structured payload for diffs: { from: 'applied', to: 'active' }, etc.
  // Keeps the table generic without needing a column per activity flavor.
  metadata jsonb
  occurred_at timestamptz [not null, default: `now()`]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (application_id, occurred_at)
  }
}

// ============================================================
// NOTIFICATION ENGINE (shared for action-needed + time-based)
// ============================================================

Enum rule_kind {
  condition  // action-needed (state-based)
  time_based // reminders (event-based)
}

Table notification_rules {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  name varchar [not null]
  kind rule_kind [not null]
  enabled boolean [not null, default: true]

  // Flexible config so we don't need a new column per rule variant.
  // condition example:  { when: { stage: 'applied', idle_days_gte: 14 } }
  // time_based example: { when: { event_type: 'interview', offset_days: -3 } }
  trigger_config jsonb [not null]
  // delivery prefs override (channels, quiet hours), optional
  action_config jsonb

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (user_id, kind)
  }
}

Enum notification_status {
  unread
  read
  snoozed
  dismissed
}

// dedup_key prevents the same logical notification from firing repeatedly.
// The rule engine builds it deterministically from rule + target + time bucket.
// Examples:
//   condition (idle 14d):  "rule:<rule_id>|app:<application_id>|bucket:2026-W21"
//   time_based (T-3 days): "rule:<rule_id>|event:<event_id>|offset:-3d"
// Unique per user so the same key from two users does not collide.
Table notifications {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  rule_id uuid [ref: > notification_rules.id]
  // At most one of these is set; both nullable.
  application_id uuid [ref: > applications.id]
  event_id uuid [ref: > events.id]

  title varchar [not null]
  content text
  status notification_status [not null, default: 'unread']
  snoozed_until timestamptz

  dedup_key varchar [not null, note: 'see comment above table for format']

  created_at timestamptz [not null, default: `now()`]
  read_at timestamptz

  indexes {
    (user_id, status, created_at)
    (user_id, dedup_key) [unique, note: 'engine relies on this for upsert/no-op on re-fire']
  }
}

Table user_notification_prefs {
  user_id uuid [pk, ref: > users.id]
  in_app_enabled boolean [not null, default: true]
  email_digest_enabled boolean [not null, default: false]
  email_digest_cadence varchar [note: 'daily | weekly']
  quiet_hours_start time
  quiet_hours_end time
  timezone varchar
}
